kube/phx_api/phx.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoenix-deployment
  namespace: default
  labels:
    app: phoenix
spec:
  selector:
    matchLabels:
      app: phoenix
  template:
    metadata:
      labels:
        app: phoenix
    spec:
      containers:
      - name: phoenix
        image: teorxiro/phx_api:latest 
        ports:
        - containerPort: 4000
