kube/phx_api/phx.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix
spec:
  selector:
    app: phoenix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
