kube/phx_api/phx.ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: phoenix
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`phx.time-manager-batman.com`)
      kind: Rule
      services:
        - name: phoenix
          port: 80
    - match: Host(`pop.time-manager-batman.com`)
      kind: Rule
      services:
        - name: phoenix
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: mon-secret-tls
